# review-tool

./: .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  index.html
assets/: style.css
src/: lib.rs  main.rs  types.rs  ui.rs  wasm.rs
src/types/: deserialize.rs  rank.rs
src/types/deserialize/: sitcon_gdsc.rs
src/types/rank/: sitcon_gdsc.rs
src/ui/: components.rs  fonts.rs  state.rs
src/ui/components/: header.rs  manuscript_info.rs  manuscript_list.rs  rank.rs
src/ui/fonts/: LICENSE.txt
