[package]
name = "review-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
eframe = "0.22.0"
egui = { version = "0.22.0", features = ["default_fonts"] }
egui_extras = "0.22.0"
indoc = "2.0.1"
serde = { version = "1.0.163", features = ["derive"] }
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
