[package]
name = "review-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui_extras = { git = "https://github.com/pan93412/egui.git", branch = "fix-observer-removal-issue" }
eframe = { git = "https://github.com/pan93412/egui.git", branch = "fix-observer-removal-issue", features = [
    "default_fonts",
    "persistence",
    "accesskit",
] }
csv = "1.2.2"
indoc = "2.0.1"
paste = "1.0.12"
serde = { version = "1.0.163", features = ["derive"] }
serde_yaml = "0.9.21"
sha2 = "0.10.6"
thiserror = "1.0.40"
tracing = "0.1.37"
serde_with = { version = "3.0.0", features = ["hex"] }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tracing-subscriber = "0.3"

[target.'cfg(target_family = "wasm")'.dependencies]
web-sys = { version = "0.3.63", features = ["Window", "Response"] }
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
web-time = { version = "0.2.0" }
